Changelog for Collections.

- Add new system settings to show create collection/selection button in tree tool bar
- Display resource id in link resource window
- Adjust colors in collections grid

Collections 3.3.0
===================
- Show assigned templates in Collection's view grid
- Fix ignore parents for pdoResources
- Add "Condition for Link resource window" as a setting for Sellection view
- Fix displaying ContentBlocks when content is in separate tab
- Fix checking for template usage in views

Collections 3.2.2
===================
- Fix D&D sort for Collection's view columns
- Added Collections.renderer.pagetitleWithIcons
- Improved handler for inline action buttons allowing icons
- Fix D&D sort when menuindex is set as default sort field
- Rename String sort type

Collections 3.2.1
===================
- Fix update from previous versions

Collections 3.2.0
===================
- Add sort type as a new Collection's template column setting
- Add permanent sort
- Auto set column label from TV caption or Tagger group name
- Pass columns value as input to snippet renderer
- Add sort type as a new Collection's view setting
- Add content disposition as a new Collection's view setting 
- Add parent as a new Collection's view setting
- Make TV columns searchable
- Use modx->getTableName to get table names for Tagger tables
- Show TV's default value in grid
- Clear filter use sort field & dir from view
- Prevent error while not passing Resource templates in Collection view

Collections 3.1.1
===================
- Fixed showing (empty) template in child's template select box
- Fixed renderer image path
- Fixed D&D reorder children when element or file tree is selected
- Fixed back to collection/selection button for static resources/weblinks/symlinks
- Fixed back to collection/selection button on create new child page

Collections 3.1.0
===================
- Fixed reset filter button in Selections
- Added option to set default values for content type for new children